# file-uploader

./: .gitignore  Cargo.toml  README.md  sharex.json
src/: main.rs
src/routers/: discord.rs  files.rs  mod.rs
src/utils/: config.rs  id.rs  mod.rs  store.rs
