[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.22", default-features=false, features = ["json", "rustls-tls"] }
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
serde = "1.0.189"
serde_json = "1.0.107"
rand = "0.8.5"